# domain/repositories/JobPostsRepositoryInterface.ts
@@ -8,4 +8,5 @@ export interface JobPostsRepositoryInterface {
     getJobPostsByPage(page: number, limits: number): Promise<JobPostEntity[] | null>;
     updateJobPostById(job_post_id: number, jobPost: JobPostEntity): Promise<InsertResultInterface | null>;
     deleteJobPost(job_post_id: number): Promise<InsertResultInterface | null>;
+    searchJobPosts(query: string): Promise<JobPostEntity[] | null>;
 };
